--- a/main.html
+++ b/main.html
@@ -4,19 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="/main.css">
-    <title>First project</title>
+    <title>Dictionary</title>
 </head>
 <body>
-    <form id="place">
-
-        <label for="box">How many buttons do you want?</label>
-        <input id="NumberBox" type="number" name="box"><br>
-        <button class="one" type="button" onclick="return numberOfButtons();">Submit</button>
-        <button class="two" onClick= "window.location.reload();" >Again!</button><br>
-        
+    <form>
+        <label for="words">Insert a word:</label><br>
+        <input class="insertWords" type="text" name="words" id="field" placeholder="Insert:"><br>
+        <button class="selectButton" type="reset" onclick="return dictionary();">Select</button>
+        <button class="showCollection" type="reset" onclick="return moreWords();">Show dictionary</button><br>
+        <label for="search">Search for a word:</label><br>
+        <input class="searchWords" type="text" name="search" id="searchPlace" placeholder="Search:">
+        <button class="search" type="reset" onclick="return searchWord();" ><i style="font-size:18px" class="fa">&#xf002;</i></button>
     </form>
-    <div id="WINNER/LOSER"></div>
+    <div id ="response">
+
+    </div>
     <script src="/main.js"></script>
 </body>
 </html>
