Added clear button

--- a/main.html
+++ b/main.html
@@ -15,10 +15,12 @@
         <button class="selectButton" type="reset" onclick="return dictionary();">Select</button>
         <button class="showCollection" type="reset" onclick="return moreWords();">Show dictionary</button><br>
         <label for="search">Search for a word:</label><br>
-        <input class="searchWords" type="text" name="search" id="searchPlace" placeholder="Search:">
+        <input class="searchWords" type="text" name="search" id="searchPlace" placeholder="Search:"><br>
         <button class="search" type="reset" onclick="return searchWord();" ><i style="font-size:18px" class="fa">&#xf002;</i></button>
+        <button class="clearButton" type="reset" onclick="return clearField();">Clear</button>
     </form>
     <div id ="response">
+        
 
     </div>
     <script src="/main.js"></script>
